Custom--app/main/default/objects/Rehab_Projected_Spend__c/Rehab_Projected_Spend__c.object-meta.xml
<CustomObject>
    <label>Rehab Projected Spend</label>
    <nameField>
        <displayFormat>RPS-{00000000}</displayFormat>
        <label>RPS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rehab Projected Spends</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>