Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Actual_Spend_Total__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spend_Total__c</fullName>
    <description>This field will populate from the Property Invoice Object by GL Code</description>
    <label>Actual Spend Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>