Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Base_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Budget_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Base Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>