Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Base_Budget_Reported_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Base_Budget_Reported_Timestamp__c</fullName>
    <label>Base Budget Reported Timestamp</label>
    <type>DateTime</type>
</CustomField>