Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Changes_To_Budget__c.field-meta.xml
<CustomField>
    <fullName>Changes_To_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Changes To Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>