Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <label>Obsolete GL Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>