Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/GL_Code_Original__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Original__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Code</label>
    <referenceTo>GL_Code__c</referenceTo>
    <relationshipLabel>Rehab Projected Spends</relationshipLabel>
    <relationshipName>Rehab_Projected_Spends</relationshipName>
    <type>Lookup</type>
</CustomField>