Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/HD_Budget_Walk__c.field-meta.xml
<CustomField>
    <fullName>HD_Budget_Walk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HD Budget Walk</label>
    <referenceTo>HD_Budget_Walk__c</referenceTo>
    <relationshipLabel>Rehab Projected Spends</relationshipLabel>
    <relationshipName>Rehab_Projected_Spends</relationshipName>
    <type>Lookup</type>
</CustomField>