Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Line_Item_Vs_Total_Revised_Budget__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Vs_Total_Revised_Budget__c</fullName>
    <formula>Rehab__r.Budget_Revised__c -  Running_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Vs Total Revised Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>