Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rehab</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>Rehab Projected Spends</relationshipLabel>
    <relationshipName>Rehab_Projected_Spends</relationshipName>
    <type>Lookup</type>
</CustomField>