Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/RehabPlusGL__c.field-meta.xml
<CustomField>
    <fullName>RehabPlusGL__c</fullName>
    <formula>Rehab__r.Name + ' ' + GL_Code__c</formula>
    <label>RehabPlusGL</label>
    <type>Text</type>
</CustomField>