Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Revised_Budget__c.field-meta.xml
<CustomField>
    <fullName>Revised_Budget__c</fullName>
    <label>Revised Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>