Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/RPS_Form__c.field-meta.xml
<CustomField>
    <fullName>RPS_Form__c</fullName>
    <formula>HYPERLINK('/apex/RehabProjectedSpend?id='+Rehab__c , 'View/Edit')</formula>
    <label>RPS Form</label>
    <type>Text</type>
</CustomField>