Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Running_Total__c.field-meta.xml
<CustomField>
    <fullName>Running_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Running Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>