Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Seasonal_Item__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seasonal Item</label>
    <type>Checkbox</type>
</CustomField>