Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Selected_Bid_Total__c.field-meta.xml
<CustomField>
    <fullName>Selected_Bid_Total__c</fullName>
    <description>From the Change Order - this will pull in based on the "Selected Bid" checkbox and the amount</description>
    <label>Selected Bid Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>