Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Variance_Actual_Spend_to_Base_Budget__c.field-meta.xml
<CustomField>
    <fullName>Variance_Actual_Spend_to_Base_Budget__c</fullName>
    <formula>Actual_Spend_Total__c -  Base_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>V Actual to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>