Custom--app/main/default/objects/Rehab_Projected_Spend__c/fields/Variance_Selected_Bid_to_Base_Budget__c.field-meta.xml
<CustomField>
    <fullName>Variance_Selected_Bid_to_Base_Budget__c</fullName>
    <formula>Selected_Bid_Total__c -  Base_Budget_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>V Bid to Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>