Custom--app/main/default/objects/Rehab_Projected_Spend__c/validationRules/VR_Validate_Created_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Validate_Created_Update</fullName>
    <active>true</active>
    <description>Validation rule for D-00014800 to stop any new Rehab Projected Spend to be created or existing Rehab Projected Spend to be updated.</description>
    <errorConditionFormula>True</errorConditionFormula>
    <errorMessage>Insufficient privileges to create or update the rehab projected spend.</errorMessage>
</ValidationRule>