Custom--app/main/default/objects/Rehab_Projected_Spend__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rehab__c</columns>
    <columns>HD_Budget_Walk__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>