Custom--app/main/default/objects/Rehab_Projected_Spend__c/listViews/Rehab_Association.listView-meta.xml
<ListView>
    <fullName>Rehab_Association</fullName>
    <columns>NAME</columns>
    <columns>Rehab__c</columns>
    <columns>HD_Budget_Walk__c</columns>
    <columns>GL_Code_Original__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Base_Budget_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HD_Budget_Walk__c</field>
        <operation>equals</operation>
        <value>BW-053379</value>
    </filters>
    <label>Rehab Association</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>